# novelwriter

./: .gitignore  Dockerfile  README.md  install.sh  pyproject.toml  tmp_patch_copilot_entrypoint.py
.github/workflows/: ci-selfhost-smoke.yml  ci.yml
app/: cli.py  config.py  main.py  schemas.py
app/api/: assistant_chat.py  copilot.py  llm.py  novels.py
app/core/: ai_client.py  auth.py  bootstrap.py  context_assembly.py  continuation_postcheck.py  continuation_text.py  prose_check.py  world_gen.py  worldpack_import.py  worldpack_import_planner.py
app/core/copilot/: __init__.py  assistant_chat_tools.py  prompting.py  research_tools.py
app/core/indexing/: __init__.py  builder.py
app/core/text/: zh.py
scripts/: selfhost_smoke.sh  setup_python_env.sh  sync_uv_version.py  uv_run.sh
tests/: test_api_world.py  test_continuation_postcheck.py  test_continuation_text.py  test_continue_endpoint.py  test_events_transaction.py  test_invite_quota.py  test_novwr_cli.py  test_prompt_catalog.py  test_prose_check.py  test_release_pipeline_contract.py  test_world_contract.py  test_world_generation.py  test_world_models.py  test_worldpack_import.py
tests/bootstrap/: test_runtime.py
tests/copilot/: test_e2e_llm.py  test_runtime.py
tests/indexing/: test_builder.py
web/: index.html  package-lock.json  playwright.config.ts
web/src/: App.tsx  index.css
web/src/__tests__/: BootstrapPanel.invariants.test.tsx  BootstrapPanel.test.tsx  DraftReviewTab.test.tsx  LibraryPage.test.tsx  Login.test.tsx  NovelAtlasPage.test.tsx  NovelCopilotDrawer.test.tsx  NovelShell.test.tsx  (+10 more)
(+80 files in other folders)
